# BankInsight-AI

./: .env  Dockerfile  Final_AI_churn_pipeline_labelencoded.pkl  README.md  combined_app.py  db_utils.py  llm_to_sql.py  load_csv_to_sqlite.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_bank-chatbot-ml.yml  main_sumit-agentic-rag.yml
.github/workflows/.github/workflows/: azure-deploy.yml
