[project]
name = "dashboard-final-year-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dill>=0.4.0",
    "fastapi>=0.119.1",
    "flask>=3.1.2",
    "google-generativeai>=0.8.5",
    "imbalanced-learn>=0.14.0",
    "imblearn>=0.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.0",
]
